Details
-
Bug
-
Status: Closed
-
P3: Somewhat important
-
Resolution: Done
-
Qt Creator 1.3.85 (2.0.0-rc1)
-
f71049bee4693e61ec8f69ce6fda49f67d2efb3f
Description
Creating (or simply having) a .pro file on another drive than the S60 SDK, will create similar error messages like QTCREATORBUG-1043. However, the tool chain will create a cleaner error message:
Unable to resolve epocRoot '/Qt/4.6.2-Symbian/s60sdk/' to real dir on current drive, defaulting to '/' for mmp paths
That line could be recognized as error and passed into the Buld issues list.