Do sanity checks when running qmake

* Check for symbian SDK and soureces being on the same drive on windows
 * Check for a Open C/C++ header in Symbian SDK and warn if that is not found
 * Check for chars in project name that might confuse symbian SDKs

Task-number: QTCREATORBUG-1045
Task-number: QTCREATORBUG-1043
Reviewed-by: dt